# learn-opengl

./: CMakeLists.txt  LICENSE
src/: application.cpp  main.cpp
src/res/shader/: basic.shader
